@@ -198,10 +198,6 @@ ocamlc = $(BEST_OCAMLC) $(flags)
 
 ocamlopt = $(BEST_OCAMLOPT) $(flags)
 
-ocamldep := $(BEST_OCAMLDEP)
-depflags := -slash
-depincludes :=
-
 .SECONDARY: $(lexers:.mll=.ml) $(parsers:.mly=.mli) $(parsers:.mly=.ml)
 
 .PHONY: all allopt opt.opt # allopt and opt.opt are synonyms
@@ -313,7 +309,6 @@ $(DEPDIR)/%.$(D): %.c | $(DEPDIR)
 
 .PHONY: depend
 depend: $(dependencies_generated_prereqs)
-	$(ocamldep) $(depflags) $(depincludes) $(mli_files) $(ml_files) \
-	  > .depend
+	$(OCAMLDEP_CMD) $(mli_files) $(ml_files) > .depend
 
 -include .depend
