@@ -16,8 +16,7 @@
 
 $(LOCAL_SRC)/.depend: $(COMPILERLIBS_COPIED_SOURCES) \
   $(COMPILERLIBS_COPIED_SOURCES_INTFS) $(LOCAL_SRC)/Makefile
-	$(BEST_OCAMLDEP) -slash -I $(LOCAL_SRC) \
-	$(COMPILERLIBS_COPIED_SOURCES) \
+	$(OCAMLDEP_CMD) -I $(LOCAL_SRC) $(COMPILERLIBS_COPIED_SOURCES) \
 	$(COMPILERLIBS_COPIED_SOURCES_INTFS) \
         > $(LOCAL_SRC)/.depend
 
