@@ -1,8 +1,11 @@
-OCAMLRUN=../../../boot/ocamlrun
-OPTS=-nostdlib -I ../../../stdlib
-OCAMLC=$(OCAMLRUN) ../../../ocamlc $(OPTS)
-OCAMLOPT=$(OCAMLRUN) ../../../ocamlopt $(OPTS)
+ROOTDIR = ../../..
 
+include $(ROOTDIR)/Makefile.common
+include $(ROOTDIR)/Makefile.best_binaries
+
+STDLIBFLAGS = -nostdlib -I $(ROOTDIR)/stdlib
+OCAMLC ?= $(BEST_OCAMLC) $(STDLIBFLAGS)
+OCAMLOPT ?= $(BEST_OCAMLOPT) $(STDLIBFLAGS)
 
 PGM=forbidden.exe publish.exe
 MOREPGM=
@@ -39,10 +42,10 @@ clean::
 %.exe: %.cmx $(OBJ)
 	$(OCAMLOPT) -o $@ $(OBJ) $<
 
-%.byt: %.cmo $(BBJ)
-	$(OCAMLC) -o $@ $(BBJ) $<
+%.byt: $(BBJ) %.cmo
+	$(OCAMLC) -o $@ $^
 
 depend:
-	ocamldep $(SRC)  $(MLI) > .depend
+	$(OCAMLDEP_CMD) $(SRC) $(MLI) > .depend
 
 -include .depend
